# Socksicle

./: .gitignore  README.md  install.sh  main.py  pyproject.toml  requirements.txt
ui/: __init__.py  about_dialog.py  add_server_dialog.py  connection_log_dialog.py  main_window.py  server_item.py  settings_dialog.py  toggle_switch.py
utils/: distro_utils.py  geo_utils.py  ping.py  ss_client.py  ss_parser.py  sub_manager.py  theme.py
